--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,67 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-size: 14pt;
+    line-height: 1.6;
+    color:#000000;   
+}
+
+header{
+    margin-left: 3%;
+    padding: 2%;
+}
+
+.container{
+    margin-left: 15%;
+    margin-right: 15%;
+    padding: 2%;
+}
+
+.titulo{
+    padding-bottom: 2rem;
+}
+
+.centralizar{
+    text-align: center;
+}
+
+.descricao{
+    text-align: justify;
+}
+
+.descricao p{
+    padding: 1.5rem 1.5rem;
+}
+
+.negrito{
+    font-weight: bold;
+}
+
+.icone{
+    border-radius: 15px 15px;
+    max-width:150px;
+    max-height:100px;   
+}
+
+.fundo{
+    background-image: url(../img/fundo.png);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #FEFADC;
+    position: relative;
+    filter:opacity(alpha=60);
+    -moz-opacity:0.3;
+    opacity: 0.3;
+}
 .contagem{
     width:300px;
     height:70px;
     background-color: #ffffff;
+    align-items: center;
 }
     
 .numero{
