--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap'); 
+
 *{
     margin: 0;
     padding: 0;
 }
 
 body{
+    font-family: Poppins;
     font-size: 14pt;
-    line-height: 1.6;
-    color:#000000;   
+    line-height: 1.5;
+    color:#000000; 
+    background-color: #FCF8DD;  
 }
 
 header{
