--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    font-family: Poppins;
+    font-family: 'Poppins';
     font-size: 14pt;
     line-height: 1.5;
     color:#000000; 
