--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap'); 
+ 
+
 
 *{
     margin: 0;
@@ -32,12 +34,23 @@ header{
     text-align: center;
 }
 
+.formulario{
+    background-color: #3F612D;
+    display: flex;
+    flex-direction: row;
+    width: 50vw;
+    margin: 0 auto;
+}
+
 .descricao{
     text-align: justify;
 }
 
 .descricao p{
     padding: 1.5rem 1.5rem;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-size: 1.5em;
 }
 
 .negrito{
