--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,15 @@ header{
 
 .formulario{
     background-color: #3F612D;
-    display: flex;
-    flex-direction: row;
     width: 50vw;
-    margin: 0 auto;
+    height: 10vh;
     position: relative;
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 auto;
 }
 
 .descricao{
@@ -74,6 +77,23 @@ header{
     max-height:100px; 
     position:relative;
     z-index: 1000;  
+}
+
+.input{
+    width: 20vw;
+    height: 3vh;
+    margin: 0 10px;
+    background-color: #FCF8DD;
+    border: none;
+}
+
+.botao{
+    border: none;
+    background-color: #F26B5B;
+    height: 3vh;
+    width: 10vw;
+    color: white;
+    border-radius: 20px;
 }
 
 /* .imagem{
