--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
+@import url('https://db.onlinewebfonts.com/c/c070eca0b747d1e84f7099e112a8c7d6?family=Circe+Rounded');
 
 *{
     margin: 0;
@@ -45,10 +46,21 @@ header p{
     /* margin-left: 15%;
     margin-right: 15%; */
     padding: 2%;
+    /* width: 100vw; */
 }
 
 .titulo{
+    font-family: 'Circe Rounded';
+    font-weight: bold;
     padding-bottom: 2rem;
+}
+
+#cor1{
+    color: #EC695B;
+}
+
+#cor2{
+   color: #24374c;
 }
 
 .centralizar{
@@ -56,10 +68,12 @@ header p{
 }
 
 .descricao{
-    text-align: justify;
+    text-align: left;
+    /* background-color: #05C7F2; */
 }
 
 .descricao p{
+    font-family: 'Poppins Regular';
     padding: 1.5rem 1.5rem;
 }
 
@@ -79,23 +93,27 @@ header p{
 }
 
 .displayed {
-    width: 100%;
-    height: 100%;
+    width: 25vw;
+    margin-left: 10vw;
+    /* height: 100%; */
     object-fit:cover ;
+    padding-bottom: 3rem;
 }
 
 .live{
     background: #05C7F2;
 }
 
-.centro {
-    margin: 0;
-    position: absolute;
+/* .centro { */
+    /* margin: 0; */
+    /* position: absolute;
     top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) 
-}
+    left: 50%; */
+    /* margin-right: -50%; */
+    /* transform: translate(-50%, -50%); */
+    /* padding-top: 8rem; */
+    /* background-color: #FFB199; */
+/* } */
 
 
 .contador{
@@ -109,7 +127,16 @@ header p{
 
 .rodape{
     background: #24374c;
+    bottom: 0;
+    position: fixed;
+    width: 100vw;
+    height: 10vh;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .contador h3{
     font-size: 1.2em;
@@ -134,15 +161,21 @@ header p{
     font-weight: bold;
 }
 
-.btn{
-    color: #FFFFFF;
-    font-family: 'Circe Rounded W03 Extra';
-    font-weight: bold;
-}
-
 #grad {
     background-image: linear-gradient( #FFB199, #FF0844);
+    width: 20vw;
+    height: 8vh;
+    border: none;
+    font-family: 'Poppins';
+    font-weight: 100;
+    color: white;
+    font-weight: bold;
   }
+
+
+
+
+
 
 @media (max-width: 425px){
 
@@ -151,7 +184,7 @@ header p{
     }
 
     .fundo-coral{
-        height: 125vh;
+        height: 161vh;
         width: 100vw;
     }
 
@@ -189,4 +222,103 @@ header p{
         display: none;
     }
 
+    .displayed{
+        display: none;
+    }
+
+    .descricao{
+        width: 80vw;
+        margin: 0 auto;
+    }
+
+    #grad{
+        width: 80vw;
+    }
+
+
+}
+
+#_form_1_ { font-size:14px; line-height:1.6; font-family:arial, helvetica, sans-serif; margin:0; }
+#_form_1_ * { outline:0; }
+._form_hide { display:none; visibility:hidden; }
+._form_show { display:block; visibility:visible; }
+#_form_1_._form-top { top:0; }
+#_form_1_._form-bottom { bottom:0; }
+#_form_1_._form-left { left:0; }
+#_form_1_._form-right { right:0; }
+#_form_1_ input[type="text"],#_form_1_ input[type="date"],#_form_1_ textarea { padding:6px; height:auto; border:#979797 1px solid; border-radius:4px; color:#000 !important; font-size:14px; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; }
+#_form_1_ textarea { resize:none; }
+#_form_1_ ._submit { -webkit-appearance:none; cursor:pointer; font-family:arial, sans-serif; font-size:14px; text-align:center; background-image: linear-gradient( #FFB199, #FF0844) !important; border:0 !important; color:#fff !important; padding:9px !important; border-radius: 10px; width: 20vw; }
+#_form_1_ ._close-icon { cursor:pointer; background-image:url('https://d226aj4ao1t61q.cloudfront.net/esfkyjh1u_forms-close-dark.png'); background-repeat:no-repeat; background-size:14.2px 14.2px; position:absolute; display:block; top:11px; right:9px; overflow:hidden; width:16.2px; height:16.2px; }
+#_form_1_ ._close-icon:before { position:relative; }
+#_form_1_ ._form-body { margin-bottom:30px; }
+#_form_1_ ._form-image-left { width:150px; float:left; }
+#_form_1_ ._form-content-right { margin-left:164px; }
+#_form_1_ ._form-branding { color:#fff; font-size:10px; clear:both; text-align:left; margin-top:30px; font-weight:100; }
+#_form_1_ ._form-branding ._logo { display:block; width:130px; height:14px; margin-top:6px; background-image:url('https://d226aj4ao1t61q.cloudfront.net/hh9ujqgv5_aclogo_li.png'); background-size:130px auto; background-repeat:no-repeat; }
+#_form_1_ ._form-label,#_form_1_ ._form_element ._form-label { font-weight:bold; margin-bottom:5px; display:block; }
+#_form_1_._dark ._form-branding { color:#333; }
+#_form_1_._dark ._form-branding ._logo { background-image:url('https://d226aj4ao1t61q.cloudfront.net/jftq2c8s_aclogo_dk.png'); }
+#_form_1_ ._form_element { position:relative; margin-bottom:10px; font-size:0; max-width:100%; }
+#_form_1_ ._form_element * { font-size:14px; }
+#_form_1_ ._form_element._clear { clear:both; width:100%; float:none; }
+#_form_1_ ._form_element._clear:after { clear:left; }
+#_form_1_ ._form_element input[type="text"],#_form_1_ ._form_element input[type="date"],#_form_1_ ._form_element select,#_form_1_ ._form_element textarea:not(.g-recaptcha-response) { display:block; width:100%; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; }
+#_form_1_ ._field-wrapper { position:relative; }
+#_form_1_ ._inline-style { float:left; }
+#_form_1_ ._inline-style input[type="text"] { width:150px; }
+#_form_1_ ._inline-style:not(._clear) + ._inline-style:not(._clear) { margin-left:20px; }
+#_form_1_ ._form_element img._form-image { max-width:100%; }
+#_form_1_ ._clear-element { clear:left; }
+#_form_1_ ._full_width { width:100%; }
+#_form_1_ ._form_full_field { display:block; width:100%; margin-bottom:10px; }
+#_form_1_ input[type="text"]._has_error,#_form_1_ textarea._has_error { border:#f37c7b 1px solid; }
+#_form_1_ input[type="checkbox"]._has_error { outline:#f37c7b 1px solid; }
+#_form_1_ ._error { display:block; position:absolute; font-size:14px; z-index:10000001; }
+#_form_1_ ._error._above { padding-bottom:4px; bottom:39px; right:0; }
+#_form_1_ ._error._below { padding-top:4px; top:100%; right:0; }
+#_form_1_ ._error._above ._error-arrow { bottom:0; right:15px; border-left:5px solid transparent; border-right:5px solid transparent; border-top:5px solid #f37c7b; }
+#_form_1_ ._error._below ._error-arrow { top:0; right:15px; border-left:5px solid transparent; border-right:5px solid transparent; border-bottom:5px solid #f37c7b; }
+#_form_1_ ._error-inner { padding:8px 12px; background-color:#f37c7b; font-size:14px; font-family:arial, sans-serif; color:#fff; text-align:center; text-decoration:none; -webkit-border-radius:4px; -moz-border-radius:4px; border-radius:4px; }
+#_form_1_ ._error-inner._form_error { margin-bottom:5px; text-align:left; }
+#_form_1_ ._button-wrapper ._error-inner._form_error { position:static; }
+#_form_1_ ._error-inner._no_arrow { margin-bottom:10px; }
+#_form_1_ ._error-arrow { position:absolute; width:0; height:0; }
+#_form_1_ ._error-html { margin-bottom:10px; }
+.pika-single { z-index:10000001 !important; }
+#_form_1_ input[type="text"].datetime_date { width:69%; display:inline; }
+#_form_1_ select.datetime_time { width:29%; display:inline; height:32px; }
+@media all and (min-width:320px) and (max-width:667px) { ::-webkit-scrollbar { display:none; }
+#_form_1_ { margin:0; width:100%; min-width:100%; max-width:100%; box-sizing:border-box; }
+#_form_1_ * { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; font-size:1em; }
+#_form_1_ ._form-content { margin:0; width:100%; }
+#_form_1_ ._form-inner { display:block; min-width:100%; }
+#_form_1_ ._form-title,#_form_1_ ._inline-style { margin-top:0; margin-right:0; margin-left:0; }
+#_form_1_ ._form-title { font-size:1.2em; }
+#_form_1_ ._form_element { margin:0 0 20px; padding:0; width:100%; }
+#_form_1_ ._form-element,#_form_1_ ._inline-style,#_form_1_ input[type="text"],#_form_1_ label,#_form_1_ p,#_form_1_ textarea:not(.g-recaptcha-response) { float:none; display:block; width:100%; }
+#_form_1_ ._row._checkbox-radio label { display:inline; }
+#_form_1_ ._row,#_form_1_ p,#_form_1_ label { margin-bottom:0.7em; width:100%; }
+#_form_1_ ._row input[type="checkbox"],#_form_1_ ._row input[type="radio"] { margin:0 !important; vertical-align:middle !important; }
+#_form_1_ ._row input[type="checkbox"] + span label { display:inline; }
+#_form_1_ ._row span label { margin:0 !important; width:initial !important; vertical-align:middle !important; }
+#_form_1_ ._form-image { max-width:100%; height:auto !important; }
+#_form_1_ input[type="text"] { padding-left:10px; padding-right:10px; font-size:16px; line-height:1.3em; -webkit-appearance:none; }
+#_form_1_ input[type="radio"],#_form_1_ input[type="checkbox"] { display:inline-block; width:1.3em; height:1.3em; font-size:1em; margin:0 0.3em 0 0; vertical-align:baseline; }
+#_form_1_ button[type="submit"] { padding:20px; font-size:1.5em; }
+#_form_1_ ._inline-style { margin:20px 0 0 !important; }
+}
+#_form_1_ { position:relative; text-align:left; 
+    /* margin:25px auto 0;  */
+    padding:20px; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; *zoom:1; background:#fff !important; border:0px solid #b0b0b0 !important; width:33vw; -moz-border-radius:0px !important; -webkit-border-radius:0px !important; border-radius:0px !important; color:#0d0c0d !important; }
+#_form_1_ ._form-title { font-size:22px; line-height:22px; font-weight:600; margin-bottom:0; font-family: 'Poppins'; width: 33vw;}
+#_form_1_:before,#_form_1_:after { content:" "; display:table; }
+#_form_1_:after { clear:both; }
+#_form_1_._inline-style { width:auto; display:inline-block; }
+#_form_1_._inline-style input[type="text"],#_form_1_._inline-style input[type="date"] { padding:10px 12px; }
+#_form_1_._inline-style button._inline-style { position:relative; top:27px; }
+#_form_1_._inline-style p { margin:0; }
+#_form_1_._inline-style ._button-wrapper { position:relative; margin:27px 12.5px 0 20px; }
+#_form_1_ ._form-thank-you { position:relative; left:0; right:0; text-align:center; font-size:18px; }
+@media all and (min-width:320px) and (max-width:667px) { #_form_1_._inline-form._inline-style ._inline-style._button-wrapper { margin-top:20px !important; margin-left:0 !important; }
 }
